2020-10-27  Tetsuharu Ohzeki  <tetsuharu.ohzeki@gmail.com>

        Accessory bar next/previous buttons do not work on inputs in shadow roots
        https://bugs.webkit.org/show_bug.cgi?id=203292

        Reviewed by Ryosuke Niwa.

        Introduced testcases only need to run with iOS family.

        * fast/shadow-dom/ios/accessory-bar-work-on-input-with-tabindex-in-shadow-tree-expected.txt: Added.
        * fast/shadow-dom/ios/accessory-bar-work-on-input-with-tabindex-in-shadow-tree.html: Added.
        * TestExpectations:
        * platform/ios/TestExpectations:
          Avoid to run introduced tests because we don't have to run them and
          tests are crashed on these platforms.
        * resources/ui-helper.js:
        (window.UIHelper.moveToNextByKeyboardAccessoryBar):
        (window.UIHelper.moveToPrevByKeyboardAccessoryBar):
        (window.UIHelper):

2020-10-27  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Bad handling of audio files in the ImageDecoder
        https://bugs.webkit.org/show_bug.cgi?id=218239

        Reviewed by Adrian Perez de Castro.

        * fast/images/animated-image-mp3-crash-expected.txt: Added.
        * fast/images/animated-image-mp3-crash.html: Added.

2020-10-27  Kenneth Russell  <kbr@chromium.org>

        [ iOS wk2 ] webgl/1.0.3/conformance/textures/copy-tex-image-2d-formats.html is failing.
        https://bugs.webkit.org/show_bug.cgi?id=209139

        Reviewed by Dean Jackson.

        Remove iOS suppression for
        webgl/1.0.3/conformance/textures/copy-tex-image-2d-formats.html.

        * platform/ios-wk2/TestExpectations:

2020-10-27  Chris Dumez  <cdumez@apple.com>

        Calling AudioContext.suspend() / resume() while already suspended / running should resolve the promise right away
        https://bugs.webkit.org/show_bug.cgi?id=218236

        Reviewed by Sam Weinig.

        Add layout test coverage.

        * webaudio/resume-context-while-running-expected.txt: Added.